[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/options/OptionsGPGS.gd" type="Script" id=1]
[ext_resource path="res://menu/options/img/btnConnect.png" type="Texture" id=2]
[ext_resource path="res://menu/options/img/btnConnectOff.png" type="Texture" id=3]
[ext_resource path="res://menu/options/img/btnConnectDis.png" type="Texture" id=4]
[ext_resource path="res://menu/options/img/btnRanking.png" type="Texture" id=5]
[ext_resource path="res://menu/options/img/btnRankingOff.png" type="Texture" id=6]
[ext_resource path="res://menu/options/img/btnAchievements.png" type="Texture" id=7]
[ext_resource path="res://menu/options/img/btnAchievementsOff.png" type="Texture" id=8]

[node name="OptionsGPGS" type="HBoxContainer"]
margin_right = 208.0
margin_bottom = 48.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 32
script = ExtResource( 1 )

[node name="BtnConnect" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 48.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="BtnRanking" type="TextureButton" parent="."]
margin_left = 80.0
margin_right = 128.0
margin_bottom = 48.0
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="BtnAchievements" type="TextureButton" parent="."]
margin_left = 160.0
margin_right = 208.0
margin_bottom = 48.0
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[connection signal="pressed" from="BtnConnect" to="." method="_on_BtnConnect_pressed"]
[connection signal="pressed" from="BtnRanking" to="." method="_on_BtnRanking_pressed"]
[connection signal="pressed" from="BtnAchievements" to="." method="_on_BtnAchievements_pressed"]
